Removed the domain availability text from the search results to look like the iOS app.

--- a/Domainr7/Views/MainPage.xaml
+++ b/Domainr7/Views/MainPage.xaml
@@ -100,33 +100,29 @@
                                              HorizontalContentAlignment="Left"
                                              IsEnabled="{Binding Availability, Converter={StaticResource AvailabilityToBooleanConverter}}"
                                              Height="80"
-                                             Opacity="{Binding Availability, Converter={StaticResource AvailabilityToOpacityConverter}}">
+                                             Opacity="{Binding Availability, Converter={StaticResource AvailabilityToOpacityConverter}}"
+											 VerticalContentAlignment="Center">
                                 <StackPanel Orientation="Horizontal"
-                                            Margin="0,0"> 
+                                            Margin="0,0"
+											VerticalAlignment="Center"> 
                                 	<Rectangle Fill="{Binding Availability, Converter={StaticResource AvailabilityToBrushConverter}}"
                                                    HorizontalAlignment="Left"
-                                                   Height="60"
+                                                   Height="40"
                                                    Width="10"
                                                    VerticalAlignment="Center"/>
-                                                   <!--Visibility="{Binding Availability, Converter={StaticResource AvailabilityVisibilityConverter}}"/>     -->
                                 	<StackPanel Orientation="Vertical"
-												Height="80">                                		  
-                                    <StackPanel Orientation="Horizontal"
-                                                VerticalAlignment="Center">
-                                        <TextBlock Text="{Binding Subdomain}"
-                                                   Style="{StaticResource PhoneTextLargeStyle}"/>
-                                        <TextBlock Text="{Binding Path}"
-                                                   Style="{StaticResource PhoneTextLargeStyle}"
-                                                   Margin="-10,0"
-                                                   Foreground="Gray"/>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal"
-                                                Margin="12,0">
-                                        
-                                        <TextBlock Text="{Binding Availability, Converter={StaticResource AvailabilityReplaceTLDConverter}}"
-                                                   Style="{StaticResource PhoneTextSubtleStyle}"
-                                                   Margin="0"/>
-												   </StackPanel>                     
+												VerticalAlignment="Center"	
+												Height="50">                                		  
+	                                    <StackPanel Orientation="Horizontal"
+	                                                VerticalAlignment="Center"
+													HorizontalAlignment="Center">
+	                                        <TextBlock Text="{Binding Subdomain}"
+	                                                   Style="{StaticResource PhoneTextLargeStyle}"/>
+	                                        <TextBlock Text="{Binding Path}"
+	                                                   Style="{StaticResource PhoneTextLargeStyle}"
+	                                                   Margin="-10,0"
+	                                                   Foreground="Gray"/>
+	                                    </StackPanel>                                                         
                                     </StackPanel>
                                 </StackPanel>
                             </HyperlinkButton>
